# fastapi-ip2location

./: .env.example  .gitignore  LICENSE.TXT  README.md  pyproject.toml
fastapi_ip2location/: __init__.py  middleware.py
tests/: test_middleware.py
